fix(inscribe/static/css/base.css): make navbar toggler visible on mobile screens

--- a/inscribe/static/css/base.css
+++ b/inscribe/static/css/base.css
@@ -47,10 +47,10 @@ body {
 .text-responsive {
   font-size: calc(100% + 0.6vw + 0.6vh);
 }
-/* #menu-toggle {
+#menu-toggle {
   z-index: 100;
-  position: fixed;
-} */
+  position: sticky;
+}
 .no-underline {
   text-decoration: none !important;
 }
